# final-project-level3-nlp-14

./: .gitmodules  README.md  app.py  constants.py  init.sh  model.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: data.md  dev.md  documents.md
