[tool.poetry]
name = "final"
version = "0.0.0"
description = "kiyoung2 final project"
authors = ["jinmang2 <jinmang2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.70.0"
numpy = "^1.21.4"
uvicorn = "0.15.0"
Pillow = "8.4.0"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
transformers = "^4.13.0"
datasets = "^1.16.1"
accelerate = "^0.5.1"
opencv-python = "^4.5.4"
konlpy = "^0.5.2"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
